<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_profile_user"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />


        <item android:id="@+id/nav_settings_user"
            android:icon="@drawable/ic_settings"
            android:title="@string/Settings"/>
        <item android:id="@+id/nav_faq_user"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq"/>
        <item android:id="@+id/nav_about_us_user"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us"/>

    </group>


    <item android:title="Communicate">
        <menu>

            <item android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share"/>


            <item android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/feedback"/>


        </menu>


    </item>



</menu>